tests/diagnostics/unknown_field.kal
# Accessing a field the struct does not declare.
struct P { x: i64 }
fn f(p: P) -> i64 = p.y;
